--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "htmlhint": "htmlhint src/*.html test/*.html",
     "eslint": "eslint --ext .js src/ test/",
     "pretest": "npm run eslint && npm run htmlhint",
-    "test": "jest --verbose --coverage",
+    "test": "jest",
     "open-coverage-report": "opener ./coverage/lcov-report/index.html",
     "start": "serve ./src",
     "deploy": "gh-pages -d src"
@@ -22,5 +22,9 @@
     "jest": "^24.9.0",
     "opener": "^1.5.1",
     "serve": "^11.0.0"
+
+   
+
   }
 }
+
